Fixes RA-INT message alignment IE
It was left justified instead of centered in IE.

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -51,6 +51,8 @@ img.grayscale:hover {
 .sign-in-tip {
     font-size: 12px;
     padding-top: 10px;
+    width: 100%;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
